security/kubernetes/pod-security-example.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: berryshop-nonprod
  labels:
    # This enables the Pod Security admission baseline profile for the namespace.
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
